welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:10: error: Missing closing brace `}' assumed here
def g():Boolean={
^ZigZag:21: error: expected start of definition
override def run() {
         ^